# ml-workflow-logger

./: .gitignore  29f4ebf5-af8a-4aaa-aca7-f42eac94418a_data.csv  LICENSE  README.md  pyproject.toml  test_logger.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: experiment1.py  local_run.py  new_example.py  new_local_example.py
logs/experiment_1/: metrics.json  params.json
ml_workflow_logger/: README.md  __init__.py  db_config.py  flow.py  local_data_store.py  logger.py  run.py
ml_workflow_logger/drivers/: abstract_driver.py  mongodb.py
ml_workflow_logger/models/: flow.py  flow_model.py  flow_record.py  flow_record_model.py  run.py  run_model.py
src/rp_ml_workflow_logger/: logger.py
tests/: test_drivers.py  test_logger.py  test_models.py
