[tool.poetry]
name = "ml-workflow-logger"
version = "0.1.0"
description = ""
authors = ["Parth <parthpisat7@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_workflow_logger"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
networkx = "^3.3"
pymongo = "^4.8.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
